making reder method

--- a/view/admin.htm
+++ b/view/admin.htm
@@ -9,8 +9,8 @@
     <script src="public/js/shared.js"></script>
   </head>
   <body>
-    <button id="poll-add">опрос добавить</button>
-    <button id="poll-read">опросы прочитать</button>
+    <button id="element-add">опрос добавить</button>
+    <button id="element-read">опросы прочитать</button>
     <div class="container">
     </div>
   </body>
