--- a/view/index.htm
+++ b/view/index.htm
@@ -9,8 +9,8 @@
     <script src="public/js/shared.js"></script>
   </head>
   <body>
-    <button id="pollAdd" >опрос добавить</button>
-    <button id="pollRead">опросы прочитать</button>
+    <button id="elementAdd" >опрос добавить</button>
+    <button id="elementRead">опросы прочитать</button>
     <div class="container">
     </div>
   </body>
