i undestend this.obj == @obj in coffe. inting obj only in init func

--- a/view/index.htm
+++ b/view/index.htm
@@ -12,7 +12,9 @@
     <script src="public/js/fabric.js"></script>
     <script src="public/js/enviroment.js"></script>
     <script src="public/js/controller.js"></script>
-    <script src="public/js/navigate.js"></script>    
+    <script src="public/js/navigate.js"></script>
+    <script src="public/js/networking.js"></script>
+    <script src="public/js/ui.js"></script>
     
     <script src="public/js/initjq.js"></script>
   </head>
@@ -22,8 +24,8 @@
     
     <div id="elementAddContainer">
       <h5>Добавиление опроса</h5>
-      Тест опроса: <input></input><br>
-      Варианты опроса: <input></input><br>
+      Тест опроса:      <input></input><br>
+      Варианты опроса:  <input></input><br>
                         <input></input><br>
       <button>Добавить вариант</button>
     </div>
