fix rendering rescue. rename init data for project

--- a/view/404.htm.erb
+++ b/view/404.htm.erb
@@ -9,6 +9,6 @@
     <script src="public/js/shared.js"></script>
   </head>
   <body>
-    <h1><%= @page %> - страница не найдена</h1>
+    <h1><%= @page_not_found %> - страница не найдена</h1>
   </body>
 </html>
