example predicate methodth

--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -12,6 +12,7 @@
     <script src="public/js/fabric.js"></script>
     <script src="public/js/env.js"></script>
     <script src="public/js/controller.js"></script>
+    <script src="public/js/picker.js"></script>
     <script src="public/js/navigate.js"></script>
     <script src="public/js/net.js"></script>
     <script src="public/js/ui.js"></script>
