--- a/view/404.htm.erb
+++ b/view/404.htm.erb
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>o4em3.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <h1><%= @info %> - ошибка парсинга</h1>
     <h1><%= @page_not_found %> - страница не найдена</h1>
   </body>
 </html>
