--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -7,7 +7,7 @@
     <link href="public/css/hide.css" rel="stylesheet" media="screen">
     <link href="public/css/style.css" rel="stylesheet" media="screen">
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="public/js/jquery.min.js"></script>
     
     <script src="public/js/fabric.js"></script>
     <script src="public/js/env.js"></script>
