--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -8,7 +8,14 @@
     <link href="public/css/style.css" rel="stylesheet" media="screen">
     
     <script src="public/js/jquery.min.js"></script>
-    
+    <script type="text/javascript">
+      window.O4 = {
+        property: new Object,
+        init: function () {
+          this.property = <%= @property.to_json %>;
+        }
+      }
+    </script>
     <script src="public/js/fabric.js"></script>
     <script src="public/js/env.js"></script>
     <script src="public/js/controller.js"></script>
@@ -25,18 +32,17 @@
 
     <div id="elementAddContainer">
       <h5>Добавление опроса</h5>
-      Тест опроса:      <textarea></textarea><button id="elementAdd" onclick="return navigate.id(this)">Опросить</button><br>
+      Тест опроса: <textarea></textarea><button id="elementAdd" onclick="return navigate.id(this)">Опросить</button><br>
       Варианты опроса:  
       <ol class="variantsList">
         <li><input id="variantItem1"></input></li>
         <li><input id="variantItem2"></input></li>
-        <button id="appendVariantItem" onclick="return navigate.id(this)">Добавить вариант</button>
       </ol>
+      <button id="appendVariantItem" onclick="return navigate.id(this)">Добавить вариант</button>
     </div>
 
     <div id="elementsListContainer">
       elementAddCcontainer
     </div>
-  
   </body>
 </html>
