--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -7,7 +7,7 @@
     <link href="public/css/hide.css" rel="stylesheet" media="screen">
     <link href="public/css/style.css" rel="stylesheet" media="screen">
     
-    <script src="public/js/jquery.min.js"></script>
+    <script src="public/lib/jquery.min.js"></script>
     <script type="text/javascript">
       window.O4 = {
         pp: new Object,
