change last commit agter safe

--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -5,6 +5,7 @@
     <title>o4em3.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="public/css/hide.css" rel="stylesheet" media="screen">
+    <link href="public/css/error.css" rel="stylesheet" media="screen">
     <link href="public/css/style.css" rel="stylesheet" media="screen">
     
     <script src="public/lib/jquery.min.js"></script>
@@ -20,8 +21,9 @@
     </script>
     <script src="public/js/fabric.js"></script>
     <script src="public/js/env.js"></script>
+    <script src="public/js/error.js"></script>
     <script src="public/js/controller.js"></script>
-    <script src="public/js/picker.js"></script>
+    <script src="public/js/inspection.js"></script>
     <script src="public/js/navigate.js"></script>
     <script src="public/js/net.js"></script>
     <script src="public/js/ui.js"></script>
