--- a/public/css/hide.css
+++ b/public/css/hide.css
@@ -1,3 +1,3 @@
-#elementAddContainer,#elementsListContainer {
+#elementAddContainer,#elementsListContainer,.elementFieldsList li {
   display: none;
 }
