--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -5,6 +5,14 @@
     <title>o4em3.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="public/css/hide.css" rel="stylesheet" media="screen">
+    <style type="text/css">
+      /* Hide CSS */
+      <% css="#style--f1";
+      2.upto @pp_backend.element.add.field.range_count[0] do |index|
+      css += ",#style--f#{index}"
+      end %>
+      <%="#{css}{display:list-item}"%>
+    </style>
     <link href="public/css/error.css" rel="stylesheet" media="screen">
     <link href="public/css/style.css" rel="stylesheet" media="screen">
     
@@ -30,22 +38,45 @@
     <script src="public/js/navigate.js"></script>
     <script src="public/js/net.js"></script>
     <script src="public/js/ui.js"></script>
-    
-    <script src="public/js/initJq.js"></script>
+    <script type="text/javascript">
+      (function() {
+        jQuery(document).ready(function() {
+          O4.init();
+          ui.init();
+          env.init();
+          state.init();
+          error.init();
+          inspector.init();
+          controller.init();
+          net.init();
+          picker.init({
+            'text': {
+              'id': '<%=@pp_backend.element.add.text.id%>'
+            },
+            'field': {
+              'idPrefix': '<%=@pp_backend.element.add.field.id_prefix%>'
+            }
+          });
+          console.log('Initialize project OK!');
+        });
+
+      }).call(this);
+    </script>
   </head>
   <body>
-    <button id="showElementAdd" onclick="return navigate.id(this)">добавить опрос</button>
+    <button id="elementAddShow" onclick="return navigate.id(this)">добавить опрос</button>
     <button id="elementsList">список опросов</button>
 
     <div id="elementAddContainer">
       <h5>Добавление опроса</h5>
       Тест опроса: <textarea id="t1"></textarea><button id="elementAdd" onclick="return navigate.id(this)">Опросить</button><br>
       Варианты опроса:  
-      <ol class="variantsList">
-        <li><input id="f1"></input></li>
-        <li><input id="f2"></input></li>
+      <ol class="elementFieldsList">
+        <% 1.upto @pp_backend.element.add.field.range_count[1] do |index| %>
+        <li id="style--<%=@pp_backend.element.add.field.id_prefix%><%=index%>"><input id="<%=@pp_backend.element.add.field.id_prefix%><%=index%>"></input></li>
+        <%end%>
       </ol>
-      <button id="appendVariantItem" onclick="return navigate.id(this)">Добавить вариант</button>
+      <button id="elementFieldAppend" onclick="return navigate.id(this)">Добавить вариант</button>
     </div>
 
     <div id="elementsListContainer">
