process make listen service for inspect elements. work state when commiting...

--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -10,6 +10,7 @@
     
     <script src="public/lib/jquery.min.js"></script>
     <script type="text/javascript">
+      // СТоит вынести в файл
       window.O4 = {
         pp: new Object,
         tt: new Object,
@@ -21,9 +22,11 @@
     </script>
     <script src="public/js/fabric.js"></script>
     <script src="public/js/env.js"></script>
+    <script src="public/js/state.js"></script>
     <script src="public/js/error.js"></script>
+    <script src="public/js/inspector.js"></script>
     <script src="public/js/controller.js"></script>
-    <script src="public/js/inspection.js"></script>
+    <script src="public/js/listen.js"></script>
     <script src="public/js/navigate.js"></script>
     <script src="public/js/net.js"></script>
     <script src="public/js/ui.js"></script>
