--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -26,7 +26,7 @@
     <script src="public/js/error.js"></script>
     <script src="public/js/inspector.js"></script>
     <script src="public/js/controller.js"></script>
-    <script src="public/js/listen.js"></script>
+    <script src="public/js/picker.js"></script>
     <script src="public/js/navigate.js"></script>
     <script src="public/js/net.js"></script>
     <script src="public/js/ui.js"></script>
