add buttons for add and delete fields variants of added ellement

--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -77,6 +77,7 @@
         <%end%>
       </ol>
       <button id="elementFieldAppend" onclick="return navigate.id(this)">Добавить вариант</button>
+      <button id="elementFieldRemove" onclick="return navigate.id(this)">Убрать вариант</button>
     </div>
 
     <div id="elementsListContainer">
