finish add element to mongo

--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="public/css/hide.css" rel="stylesheet" media="screen">
     <style type="text/css">
-      /* Hide CSS */
+      /* Show CSS */
       <% css="#style--f1";
       2.upto @pp_backend.element.add.field.range_count[0] do |index|
       css += ",#style--f#{index}"
