read all elements

--- a/view/index.htm.erb
+++ b/view/index.htm.erb
@@ -65,7 +65,7 @@
   </head>
   <body>
     <button id="elementAddShow" onclick="return navigate.id(this)">добавить опрос</button>
-    <button id="elementsList">список опросов</button>
+    <button id="elementRead" onclick="return navigate.id(this)">список опросов</button>
 
     <div id="elementAddContainer">
       <h5>Добавление опроса</h5>
