fix router from eval to standart call recivied object main controller

--- a/views/index.htm.erb
+++ b/views/index.htm.erb
@@ -1,5 +1,6 @@
 <button id="elementAddShow" onclick="return navigate.id(this)">добавить опрос</button>
 <button id="elementsRead" onclick="return navigate.id(this)">список опросов</button>
+<button id="vkAuth" onclick="return navigate.id(this)">вконтакте vkauth</button>
 
 <div id="elementAddContainer">
   <h5>Добавление опроса</h5>
@@ -18,6 +19,6 @@
   <!-- Такой вариант отпадает, т.к. в случае повторной ошибки придеться очищать динамический блок
   <span id="error--elementsListContainer">Default MSG: error reading ellements</span>
   // -->
-  
 </div>
+
 <div id="textAreaID"></div>
