--- a/views/user.htm.erb
+++ b/views/user.htm.erb
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>o4em3.0</title>
-  </head>
-  <body>
-    Hello world
-  </body>
-</html>
+Ver 1.3
+<iframe src="http://localhost:3000/" width="100%" height="100%"></iframe>
