--- a/views/main/main.htm.erb
+++ b/views/main/main.htm.erb
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <script type="text/javascript" src="public/lib/js/jquery.min.js"></script>
+    <script type="text/javascript" src="public/lib/js/jquery.json-viewer.js"></script>
     <script type="text/javascript" src="public/lib/js/bootstrap.min.js"></script>
 
     <link href="public/lib/css/bootstrap.min.css" rel="stylesheet" media="screen">
