finish implant auth struct

--- a/views/index.htm.erb
+++ b/views/index.htm.erb
@@ -1,5 +1,6 @@
 <button id="elementAddShow" onclick="return navigate.id(this)">добавить опрос</button>
 <button id="elementsRead" onclick="return navigate.id(this)">список опросов</button>
+<button id="test_json" onclick="return navigate.id(this)">test json</button>
 <button id="vkAuth" onclick="return navigate.id(this)">вконтакте vkauth</button>
 
 <div id="elementAddContainer">
@@ -21,5 +22,8 @@
   // -->
 </div>
 
-<div id="textAreaID"></div>
+<div id="textAreaID">some data</div>
+<div id="json">
+  <pre id="json-renderer"></pre>
+</div>
 <div id="iframeID"></div>
